<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appcombat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/actionSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconifiedByDefault="true"
        android:padding="4dp"
        android:title="@string/ara"
        app:showAsAction="always"
        appcombat:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/actionVert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_more_vert_24dp"
        android:iconifiedByDefault="true"
        android:padding="4dp"
        android:title="@string/menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/about"
                android:title="@string/about" />
            <item
                android:id="@+id/newPage"
                android:title="New Page" />
        </menu>
    </item>
</menu>