<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLayout"
    android:minHeight="200dp"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:id="@+id/lnrLayoutFavorite"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/imgFlagFavorite"
            android:contentDescription="@string/flag_favorite"
            android:layout_width="33dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/txtCurrencyTypeFavorite"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Dolar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtValueBuyingFavorite"
                style="@style/txtBuyingSellingValues"
                tools:text="Alım : 00,00 TL" />

            <TextView
                android:id="@+id/txtValueSellingFavorite"
                style="@style/txtBuyingSellingValues"
                tools:text="Satış : 00,00 TL" />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/imgFvrButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/button_favorite"
            android:text=""
            android:textOff=""
            android:textOn="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:baselineAligned="true"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:autofillHints="@string/st_sinir"
                android:id="@+id/edtUstSinir"
                style="@style/txtLimit"
                android:hint="@string/st_sinir"
                tools:targetApi="o" />

            <EditText
                android:autofillHints="@string/alt_sinir"
                android:id="@+id/edtAltSinir"
                style="@style/txtLimit"
                android:hint="@string/alt_sinir"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchTop"
                style="@style/switchNotification" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchBot"
                style="@style/switchNotification" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>